--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactbpmn",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fqq2.github.io/bpmn",
   "dependencies": {
     "bpmn-font": "^0.8.0",
     "bpmn-js": "^3.0.4",
@@ -16,6 +17,8 @@
     "tiny-svg": "^2.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -29,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }
 }
