--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactbpmn",
+  "name": "bpmn",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://fqq2.github.io/bpmn",
